Portafolio_Desarrolladot_Web_Full_Stack

--- a/src/sections/Projects/Projects.module.css
+++ b/src/sections/Projects/Projects.module.css
@@ -39,6 +39,15 @@
   }
 }
 
+p{
+  font-size: 14px;
+  font-weight: 450;
+}
+
+.textoCaption {
+  margin-bottom: 30px;
+}
+
 @media (width >= 800px){
   .projectsContainer{
     flex-direction: row;
